creation composants layout + slider

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,15 @@
-<h1>This is the header</h1>
+<header>
+  <div class="logo">
+    <a href="">
+      <img src="../../../assets/images/logo.png" alt="website main logo" />
+    </a>
+  </div>
+  <div class="navigation">
+    <ul>
+      <li><a routerLink="/">Accueil</a></li>
+      <li><a routerLink="movie-list">Films</a></li>
+      <li><a href="">Séries</a></li>
+      <li><a href="">Genres</a></li>
+    </ul>
+  </div>
+</header>
