--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
-
-<h1>Mon application netflix: "{{ title }}"</h1>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
