--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 // CSS Reset and Global Styles (Modern Normalize)
 @import "node_modules/modern-normalize/modern-normalize.css";
+@import "primeicons/primeicons.css";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap");
 
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
+  font-size: 14px;
 }
