http request movies

--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -7,7 +7,7 @@
       />
     </div>
     <div class="slide-pane">
-      <h2 class="title">Slider title</h2>
+      <h2 class="title">Les affranchis</h2>
       <div class="infos">
         <div class="rating">
           <i class="pi pi-star-fill"></i>
@@ -23,7 +23,15 @@
           <span>20.06.2023</span>
         </div>
       </div>
-      <div class="description">Description du film</div>
+      <div class="description">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
+        commodi quia repellat quidem, dolor atque unde adipisci eum delectus
+        quae cum odit praesentium ducimus obcaecati itaque voluptate at ipsam
+        totam.
+      </div>
     </div>
   </div>
 </div>
+<pre>
+  {{ movies | json }}
+</pre>
