--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,37 +1,32 @@
-<div class="slider">
-  <div class="slide">
-    <div class="slide-bg">
-      <img
-        src="https://static1.colliderimages.com/wordpress/wp-content/uploads/2023/06/longest-martin-scorsese-movies.jpg"
-        alt="movie poster"
-      />
-    </div>
-    <div class="slide-pane">
-      <h2 class="title">Les affranchis</h2>
-      <div class="infos">
-        <div class="rating">
-          <i class="pi pi-star-fill"></i>
-          <span>8.9</span>
-          <span>/10</span>
-        </div>
-        <div class="votes">
-          <i class="pi pi-users"></i>
-          <span>443</span>
-        </div>
-        <div class="release-date">
-          <i class="pi pi-calendar"></i>
-          <span>20.06.2023</span>
-        </div>
+<div class="slider" *ngIf="movies$ | async as movies">
+  <ng-container *ngFor="let movie of movies.results; let movieIndex = index">
+    <div class="slide" *ngIf="movieIndex === sliderIndex" @slideFade>
+      <! ng-container is a logical container that can be used to wrap nodes and add local variables -->
+      <div class="slide-bg">
+        <img
+          [src]="imageBaseUrl + 'w1280' + movie.backdrop_path"
+          [alt]="movie.title"
+        />
       </div>
-      <div class="description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
-        commodi quia repellat quidem, dolor atque unde adipisci eum delectus
-        quae cum odit praesentium ducimus obcaecati itaque voluptate at ipsam
-        totam.
+      <div class="slide-pane">
+        <h2 class="title">{{ movie.original_title }}</h2>
+        <div class="infos">
+          <div class="rating">
+            <i class="pi pi-star-fill"></i>
+            <span>{{ movie.vote_average | number : "1.1-1" }}</span>
+            <span>/10</span>
+          </div>
+          <div class="votes">
+            <i class="pi pi-users"></i>
+            <span>{{ movie.vote_count }}</span>
+          </div>
+          <div class="release-date">
+            <i class="pi pi-calendar"></i>
+            <span>{{ movie.release_date | date : "yyyy" }}</span>
+          </div>
+        </div>
+        <div class="description">{{ movie.overview }}</div>
       </div>
     </div>
-  </div>
+  </ng-container>
 </div>
-<pre>
-  {{ movies | json }}
-</pre>
