--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,4 +8,6 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
+  color: white;
+  background-color: #141414;
 }
