--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -1,6 +1,6 @@
 .banner {
-  .shows {
-    margin: 0.5rem;
+  padding: 0.5rem;
+  &-container {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     gap: 0.5rem;
