--- a/src/app/components/show-item/show-item.component.html
+++ b/src/app/components/show-item/show-item.component.html
@@ -1,7 +1,7 @@
 <a class="show-item" *ngIf="showItem">
   <div class="show-item-rating">
     <i class="pi pi-star"></i>
-    <span>{{ showItem.vote_average }}/10</span>
+    <span>{{ showItem.vote_average | number : "1.1-1" }}/10</span>
   </div>
   <div class="show-item-image">
     <img
