--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,13 @@
 <app-slider></app-slider>
-<app-banner></app-banner>
-<div>Séries</div>
+<ng-container *ngIf="upcomingMovies$ | async as upcomingMovies">
+  <app-banner
+    [title]="'Upcoming Movies'"
+    [shows]="upcomingMovies.results"
+  ></app-banner>
+</ng-container>
+<ng-container *ngIf="topRatedMovies$ | async as topRatedMovies">
+  <app-banner
+    [title]="'Top Rated Movies'"
+    [shows]="topRatedMovies.results"
+  ></app-banner>
+</ng-container>
