added popular TVshows

--- a/src/app/components/show-item/show-item.component.html
+++ b/src/app/components/show-item/show-item.component.html
@@ -9,5 +9,8 @@
       [alt]="showItem.title"
     />
   </div>
-  <p class="show-item-title">{{ showItem.original_title }}</p>
+  <! affiche le titre du film ou de la série >
+  <p class="show-item-title">
+    {{ showItem.original_title }}
+  </p>
 </a>
