--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -2,6 +2,7 @@
   <h1>{{ title }}</h1>
   <div class="banner-container" *ngIf="shows">
     <div class="shows" *ngFor="let show of shows">
+      <!-- Affiche le composant showItem -->
       <app-show-item [showItem]="show"></app-show-item>
     </div>
   </div>
