--- a/src/app/components/show-item/show-item.component.html
+++ b/src/app/components/show-item/show-item.component.html
@@ -1,4 +1,4 @@
-<a class="show-item" *ngIf="showItem">
+<a class="show-item" *ngIf="showItem" [routerLink]="'detail/' + showItem.id">
   <div class="show-item-rating">
     <i class="pi pi-star"></i>
     <span>{{ showItem.vote_average | number : "1.1-1" }}/10</span>
@@ -9,7 +9,6 @@
       [alt]="showItem.title"
     />
   </div>
-  <! affiche le titre du film ou de la série >
   <p class="show-item-title">
     {{ showItem.original_title }}
   </p>
