--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,5 +1,5 @@
-<div class="slider" *ngIf="movies$ | async as movies">
-  <ng-container *ngFor="let movie of movies; let movieIndex = index">
+<div class="slider" *ngIf="slides">
+  <ng-container *ngFor="let movie of slides; let movieIndex = index">
     <div class="slide" *ngIf="movieIndex === sliderIndex" @slideFade>
       <!-- ng-container is a logical container that can be used to wrap nodes and add local variables -->
       <div class="slide-bg">
