--- a/src/app/pages/show-detail/show-detail.component.html
+++ b/src/app/pages/show-detail/show-detail.component.html
@@ -1,5 +1,51 @@
 <ng-container *ngIf="show$ | async as show">
   <app-slider [slides]="[show]" [isHeader]="true"></app-slider>
+
+  <p-tabView>
+    <p-tabPanel header="Overview">
+      <div class="overview-wrap">
+        <div class="poster">
+          <img [src]="imagesSizes.medium + show.poster_path" alt="" />
+        </div>
+        <div class="show-data">
+          <h2>Overview</h2>
+          <p class="overview">{{ show.overview }}</p>
+          <div class="stat">
+            <div class="label">Release Date:</div>
+            <div class="value">
+              {{ show.release_date | date : "dd-MM-yyyy" }}
+            </div>
+          </div>
+          <div class="stat">
+            <div class="label">Language:</div>
+            <div class="value">
+              {{ show.original_language }}
+            </div>
+          </div>
+          <div class="stat">
+            <div class="label">Revenue:</div>
+            <div class="value">
+              {{ show.revenue | currency }}
+            </div>
+          </div>
+          <div class="stat">
+            <div class="label">Runtime:</div>
+            <div class="value">
+              {{ show.runtime }}
+            </div>
+          </div>
+          <div class="stat">
+            <div class="label">Genres:</div>
+            <div class="value">
+              <span *ngFor="let genre of show.genres"> {{ genre.name }} </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </p-tabPanel>
+    <p-tabPanel header="Videos"> </p-tabPanel>
+    <p-tabPanel header="Photos"> </p-tabPanel>
+  </p-tabView>
 </ng-container>
 
 <pre>
