--- a/src/app/pages/show-detail/show-detail.component.html
+++ b/src/app/pages/show-detail/show-detail.component.html
@@ -48,7 +48,7 @@
       <ng-container *ngIf="showVideos$ | async as showVideos">
         <div class="videos">
           <div *ngFor="let showVideo of showVideos">
-            {{ showVideo | json }}
+            <app-video-embed [key]="showVideo.key"></app-video-embed>
           </div>
         </div>
       </ng-container>
