--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,17 +3,23 @@
 </ng-container>
 
 <ng-container *ngIf="upcomingMovies$ | async as upcomingMovies">
-  <app-banner [title]="'Upcoming Movies'" [shows]="upcomingMovies"></app-banner>
+  <app-banner
+    [title]="'Upcoming Movies'"
+    [shows]="upcomingMovies"
+    [showType]="'movie'"
+  ></app-banner>
 </ng-container>
 <ng-container *ngIf="topRatedMovies$ | async as topRatedMovies">
   <app-banner
     [title]="'Top Rated Movies'"
     [shows]="topRatedMovies"
+    [showType]="'movie'"
   ></app-banner>
 </ng-container>
 <ng-container *ngIf="popularTvShows$ | async as popularTvShows">
   <app-banner
     [title]="'Popular Tv Shows'"
     [shows]="popularTvShows"
+    [showType]="'tv'"
   ></app-banner>
 </ng-container>
