--- a/src/app/pages/show-detail/show-detail.component.html
+++ b/src/app/pages/show-detail/show-detail.component.html
@@ -58,18 +58,46 @@
       <ng-container *ngIf="showImages$ | async as showImages">
         <div class="images">
           <div *ngFor="let showImage of showImages">
-            <img
-              [src]="imagesSizes.medium + showImage.file_path"
-              alt=""
+            <p-image
+              [src]="imagesSizes.large + showImage.file_path"
+              [alt]="show.title"
+              width="100%"
+              [preview]="true"
               class="show-image"
-            />
+            ></p-image>
           </div>
         </div>
       </ng-container>
     </p-tabPanel>
   </p-tabView>
+
+  <!-- Carrousel des acteurs (module primeNG)-->
+  <ng-container *ngIf="showCast$ | async as actors">
+    <p-carousel
+      [value]="actors"
+      [numVisible]="6"
+      [numScroll]="3"
+      [circular]="false"
+    >
+      <ng-template let-actor pTemplate="item">
+        <div class="actor">
+          <img
+            *ngIf="actor.profile_path; else defaultActorPhoto"
+            [src]="imagesSizes.medium + actor.profile_path"
+            [alt]="actor.name"
+          />
+          <div class="character">{{ actor.character }}</div>
+          <div class="actor-name">{{ actor.name }}</div>
+        </div>
+      </ng-template>
+    </p-carousel>
+  </ng-container>
+  <ng-template #defaultActorPhoto>
+    <img src="../../../assets/images/actor.png" alt="" />
+  </ng-template>
 </ng-container>
 
-<pre>
-  {{ show$ | async | json }}
-</pre>
+<!-- Similar movies -->
+<ng-container *ngIf="similarMovies$ | async as similarMovies">
+  <app-banner [title]="'Watch Similar'" [shows]="similarMovies"></app-banner>
+</ng-container>
