--- a/src/app/pages/show-detail/show-detail.component.scss
+++ b/src/app/pages/show-detail/show-detail.component.scss
@@ -62,9 +62,26 @@
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   column-gap: 1rem;
   row-gap: 1rem;
-  img {
+  .show-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+}
+
+.actor {
+  padding: 0 0.5rem;
+  img {
+    min-width: 5rem;
+    width: 100%;
+  }
+  .character {
+    text-align: center;
+    padding-bottom: 3px;
+  }
+  .actor-name {
+    text-align: center;
+    font-size: 0.9rem;
+    color: grey;
   }
 }
