movie-list replaced with show-list

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,7 +7,7 @@
   <div class="navigation">
     <ul>
       <li><a routerLink="/">Accueil</a></li>
-      <li><a routerLink="movie-list">Films</a></li>
+      <li><a routerLink="list">Films</a></li>
       <li><a href="">Séries</a></li>
       <li><a href="">Genres</a></li>
     </ul>
