--- a/src/app/pages/shows-list/shows-list.component.scss
+++ b/src/app/pages/shows-list/shows-list.component.scss
@@ -1,4 +1,5 @@
 .show-list-grid {
+  padding: 1rem;
   display: grid;
   grid-template-columns: repeat(
     auto-fill,
@@ -6,4 +7,12 @@
   ); /* 6 éléments par ligne */
   gap: 0.5rem;
   grid-row-gap: 1rem;
+}
+.p-input-icon-left {
+  .searchInput {
+    margin: 2rem;
+  }
+  i {
+    margin-left: 2rem;
+  }
 }
