Fixed: url route when clicking on movie for movieDetail

--- a/src/app/pages/shows-list/shows-list.component.html
+++ b/src/app/pages/shows-list/shows-list.component.html
@@ -5,7 +5,7 @@
     <input
       class="searchInput"
       type="text"
-      placeholder="Search for a show"
+      placeholder="Search for a movie"
       pInputText
       [(ngModel)]="searchValue"
       (change)="searchValueChanged()"
@@ -26,5 +26,5 @@
       ></p-paginator>
     </div>
   </ng-container>
-  // attention showsList n'est pas connu en dehors du ng-container
+  <!-- attention showsList n'est pas connu en dehors du ng-container -->
 </div>
