--- a/src/app/components/show-item/show-item.component.html
+++ b/src/app/components/show-item/show-item.component.html
@@ -1,7 +1,7 @@
 <a
   class="show-item"
   *ngIf="showItem"
-  [routerLink]="'detail/' + showItem.id + '/' + showType"
+  [routerLink]="'/detail/' + showItem.id + '/' + showType"
 >
   <div class="show-item-rating">
     <i class="pi pi-star"></i>
