fixed -> paginator incorrectly displaying current page number

--- a/src/app/pages/shows-list/shows-list.component.html
+++ b/src/app/pages/shows-list/shows-list.component.html
@@ -21,7 +21,8 @@
     <div class="pagniator">
       <p-paginator
         (onPageChange)="pageHasChanged($event)"
-        [rows]="20"
+        [rows]="rows"
+        [first]="first"
         [totalRecords]="showsList.total_results"
       ></p-paginator>
     </div>
