--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import "primeicons/primeicons.css";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap");
 @import "primeng/resources/themes/md-dark-indigo/theme.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "primeng/resources/primeng.css";
 
 body {
@@ -17,4 +18,13 @@ body {
 a {
   text-decoration: none;
   color: white;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
