--- a/src/app/pages/shows-list/shows-list.component.html
+++ b/src/app/pages/shows-list/shows-list.component.html
@@ -3,6 +3,16 @@
     <i class="pi pi-search"></i>
     <!-- Two-way data binding + event listener (change)-->
     <input
+      *ngIf="showsType == 'tv'"
+      class="searchInput"
+      type="text"
+      placeholder="Search for a TV show"
+      pInputText
+      [(ngModel)]="searchValue"
+      (change)="searchValueChanged()"
+    />
+    <input
+      *ngIf="showsType == 'movie'"
       class="searchInput"
       type="text"
       placeholder="Search for a movie"
@@ -16,7 +26,7 @@
   <ng-container *ngIf="showsList$ | async as showsList">
     <div class="show-list-grid">
       <div *ngFor="let show of showsList.results">
-        <app-show-item [showItem]="show"></app-show-item>
+        <app-show-item [showItem]="show" [showType]="showsType"></app-show-item>
       </div>
     </div>
 
