--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -9,7 +9,7 @@
       <li><a routerLink="/">Accueil</a></li>
       <li><a routerLink="list/movie">Films</a></li>
       <li><a routerLink="list/tv">Séries</a></li>
-      <li><a href="">Genres</a></li>
+      <li><a routerLink="genres">Genres</a></li>
     </ul>
   </div>
 </header>
