--- a/src/app/pages/genres/genres.component.html
+++ b/src/app/pages/genres/genres.component.html
@@ -8,7 +8,13 @@
         aria-hidden="true"
         role="button"
         >{{ genre.name }}</a
-      >
+      ><!-- aria-hidden="true" is used to hide the link from screen readers -->
     </ng-container>
   </div>
 </div>
+<ng-container *ngIf="shows$ | async as showsList">
+  <div class="show-list-grid">
+    <div *ngFor="let show of showsList">
+      <app-show-item [showItem]="show" />
+    </div></div
+></ng-container>
