--- a/src/app/pages/genres/genres.component.scss
+++ b/src/app/pages/genres/genres.component.scss
@@ -6,6 +6,7 @@
   justify-content: start;
   padding: 1rem;
   a {
+    cursor: pointer;
     text-decoration: none;
     font-size: 1.2rem;
     padding: 0.5rem;
@@ -17,4 +18,15 @@
       background-color: $primary-color-hover;
     }
   }
+}
+
+.show-list-grid {
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(16.6%, 1fr)
+  ); /* 6 éléments par ligne */
+  gap: 0.5rem;
+  grid-row-gap: 1rem;
 }
