--- a/src/app/pages/genres/genres.component.html
+++ b/src/app/pages/genres/genres.component.html
@@ -3,8 +3,7 @@
     <ng-container *ngIf="genres$ | async as genres">
       <a
         *ngFor="let genre of genres"
-        (keydown)="findByGenre(genre.id)"
-        (click)="findByGenre(genre.id)"
+        [routerLink]="['/genres', genre.id]"
         aria-hidden="true"
         role="button"
         >{{ genre.name }}</a
