--- a/src/app/components/slider/slider.component.scss
+++ b/src/app/components/slider/slider.component.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/variables";
+
 .slider {
   position: relative;
   height: 35rem;
@@ -33,7 +35,7 @@
     &-pane {
       position: absolute;
       top: 5rem;
-      left: 5rem;
+      left: 2rem;
       color: white;
       .title {
         font-size: 2.5rem;
@@ -53,12 +55,84 @@
       }
       .description {
         font-size: 1.2rem;
-        width: 75%;
+        width: 90%;
+        max-height: 15rem;
+        overflow-y: hidden;
       }
     }
   }
   .pi {
     color: orange;
     margin-right: 0.5rem;
+  }
+}
+
+@media (min-width: $tablet) {
+}
+
+@media (min-width: $desktop) {
+  .slider {
+    position: relative;
+    height: 35rem;
+    .slide {
+      width: 100%;
+      position: absolute;
+      &-bg {
+        position: relative;
+        height: 35rem;
+        img {
+          height: 100%;
+          width: 100%;
+          object-fit: cover;
+        }
+        &::after {
+          // ajoute une div après l'élément slide-bg
+          content: "";
+          // permet de positionner l'élément par dessus l'image
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          display: block; // force a se comporter comme une div
+          background-image: rgb(0, 0, 0);
+          background: linear-gradient(
+            90deg,
+            rgba(0, 0, 0, 1) 0%,
+            rgba(255, 255, 255, 0) 100%
+          );
+        }
+      }
+      &-pane {
+        position: absolute;
+        top: 5rem;
+        left: 5rem;
+        color: white;
+        .title {
+          font-size: 2.5rem;
+          margin-bottom: 1.5rem;
+        }
+        .infos {
+          font-size: 1.2rem;
+          .rating {
+            margin-bottom: 0.5rem;
+          }
+          .votes {
+            margin-bottom: 0.5rem;
+          }
+          .release-date {
+            margin-bottom: 1.5rem;
+          }
+        }
+        .description {
+          font-size: 1.2rem;
+          width: 75%;
+        }
+      }
+    }
+    .pi {
+      color: orange;
+      margin-right: 0.5rem;
+    }
   }
 }
