fixed asset/images path

--- a/src/app/pages/show-detail/show-detail.component.html
+++ b/src/app/pages/show-detail/show-detail.component.html
@@ -93,7 +93,7 @@
     </p-carousel>
   </ng-container>
   <ng-template #defaultActorPhoto>
-    <img src="../../../assets/images/actor.png" alt="" />
+    <img src="assets/images/actor.png" alt="" />
   </ng-template>
 </ng-container>
 
