--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="logo">
     <a href="">
-      <img src="../../../assets/images/logo.png" alt="website main logo" />
+      <img src="assets/images/logo.png" alt="website main logo" />
     </a>
   </div>
   <div class="navigation">
